# amon

./: ChangeLog  INSTALL  Makefile.am  README  acinclude.m4  amon.conf-sample  amon.spec.in  amond.conf-sample  autogen.sh  configure.in  make_slack.in  protocol.txt  rc.amond.in  rc.amond.slackware  slack-desc.in  slack_doinst.sh
amon/: Makefile.am  amon.cpp  amon.h
amond/: Makefile.am  amon_oss.cpp  amon_pa.cpp  amon_socket.cpp  amon_socket.h  amond.cpp  amond.h  globals.h
amonplayer/: Makefile.am  amonplayer.cpp  amonplayer.h  get_host.cpp  get_host.h
icons/: Makefile.am  amon-16x16.xpm  amon-22x22.xpm  amon-32x32.xpm
lib/: Makefile.am  am.h  amcmdswitch.cpp  amcmdswitch.h  amlabel.cpp  amlabel.h  ammeter.cpp  ammeter.h  ammeteraverage.cpp  ammeteraverage.h  ammonconfig.cpp  ammonconfig.h  ammondaemonconfig.cpp  ammondaemonconfig.h  amparser.cpp  amparser.h  amplayer.cpp  amplayer.h  amplaymeter.cpp  amplaymeter.h  amprofile.cpp  amprofile.h  amprofileline.cpp  amprofileline.h  amprofilesection.cpp  amprofilesection.h  ampushbutton.cpp  ampushbutton.h  amringbuffer.cpp  amringbuffer.h  amstereochannel.cpp  amstereochannel.h  amstereometer.cpp  amstereometer.h  amtransportbutton.cpp  amtransportbutton.h  rtpbye.cpp  rtpbye.h  rtpconnection.cpp  rtpconnection.h  (+12 more)
xdg/: Makefile.am  amon.desktop  amonplayer.desktop
